# CS5310_assignments

./: .gitignore  CMakeLists.txt  README.md
assignment2/: CMakeLists.txt  Image.c  Image.h  README.md  fractals.cpp  fractals.h  imagetest.c  main.cpp  mandeltest.c  mandeltest.cpp  perlinNoise.cpp  perlinNoise.h
assignment2/gradescope/: Image.c  Image.h  README.md  fractals.h  main.cpp  mandeltest.cpp  perlinNoise.cpp  perlinNoise.h
assignment2/master/: julia_00.ppm  julia_02.ppm  julia_04.ppm  julia_05.ppm  julia_06.ppm  julia_07.ppm  julia_09.ppm  julia_10.ppm  julia_12.ppm  julia_14.ppm  julia_15.ppm  julia_16.ppm  julia_18.ppm  julia_19.ppm  julia_23.ppm  julia_25.ppm  julia_27.ppm  julia_28.ppm  julia_34.ppm  julia_35.ppm  julia_36.ppm  julia_37.ppm  julia_39.ppm  julia_40.ppm  julia_43.ppm  julia_44.ppm  julia_45.ppm  julia_47.ppm  julia_52.ppm  julia_54.ppm  julia_55.ppm  julia_56.ppm  julia_59.ppm  julia_61.ppm  julia_62.ppm  julia_63.ppm  julia_64.ppm  julia_65.ppm  julia_66.ppm  julia_70.ppm  (+13 more)
assignment3/: CMakeLists.txt  mytest2.ppm
assignment3/include/: Image.h  Line.h  anti-alias.h  ball.h
assignment3/src/: Line.c  anti-alias.cpp  ball.cpp  ellipseMidpoint.c  mytest.cpp  test3a.c  test3b.c  test3c.c  test3d.c  testbench.c
assignment3/upload/: README.md
assignment3/upload/include/: anti-alias.h
assignment3/upload/src/: anti-alias.cpp
assignment4/: CMakeLists.txt  README.md  makefile
assignment4/include/: Graphic.h  mainWindow.h
assignment4/src/: Graphic.c  Image.c  Polygon.c  anti-alias.cpp  main.cpp  mainWindow.cpp  mytest.cpp  test3a.c  testbench.c
assignment4/test/: polyspeed.c  test4a.c  test4b.c
assignment4/upload/: CMakeLists.txt
assignment5/: CMakeLists.txt  README.md  Screen Recording 2024-06-27 at 01.40.48.mov
assignment5/gradescope/include/: fsMath.h
assignment5/gradescope/src/: Line.c
assignment5/gradescope/test/test5/: test5b.c
assignment5/include/: Line.h  Module.h  Polygon.h  fsMath.h  mainWindow.h
assignment5/src/: Line.c  Module.c  Polygon.c  fsMath.c  mainWindow.cpp
assignment5/test/test5/: test5a.c  test5b.c  test5c.c  test5d.c
assignment5/test/test6/: test6a.c  test6b.c
assignment5/upload/: README.md
assignment5/upload/include/: Line.h  mainWindow.h
assignment5/upload/test/: test4a.c
file1/: CMakeLists.txt
file1/include/: Line.h  Module.h  Polygon.h  mainWindow.h
file1/src/: Line.c  Module.c  Polygon.c
file2/: CMakeLists.txt
file2/include/: DataStructure.h  Image.h  Module.h  Polygon.h
file2/src/: DataStructure.c  Image.c  Line.c  Module.c  Polygon.c  fsMath.c  mainWindow.cpp
gradescope/src/: Module.c  mainWindow.cpp
gradescope/test/test5/: test5c.c
graphic/: README.md
graphic/images/: lab1.ppm
graphics/images/: powerpuff.ppm  tmp.ppm
graphics/lib/: makefile
graphics/src/: makefile
include/: Bezier.h  Definition.h  Image.h  Light.h  Line.h  Module.h  Particle.h  Polygon.h  WaterSimulation.h  fsMath.h  mainWindow.h  mainWindowOffline.h  perlinNoise.h  plyRead.h
old_files/assignment2/gradescope/: CMakeLists.txt  fractals.cpp
old_files/assignment2/master/: julia_01.ppm  julia_03.ppm  julia_08.ppm  julia_11.ppm  julia_13.ppm  julia_17.ppm  julia_20.ppm  julia_21.ppm  julia_22.ppm  julia_24.ppm  julia_26.ppm  julia_29.ppm  julia_30.ppm  julia_31.ppm  julia_32.ppm  julia_33.ppm  julia_38.ppm  julia_41.ppm  julia_42.ppm  julia_46.ppm  julia_48.ppm  julia_49.ppm  julia_50.ppm  julia_51.ppm  julia_53.ppm  julia_57.ppm  julia_58.ppm  julia_60.ppm  julia_67.ppm  julia_68.ppm  julia_69.ppm  julia_71.ppm  julia_72.ppm  julia_73.ppm  julia_74.ppm  julia_75.ppm  julia_77.ppm  julia_81.ppm  julia_83.ppm  julia_86.ppm  (+7 more)
old_files/assignment3/: assignment3
old_files/assignment3/src/: circleMidpoint.c  test3c.c
old_files/assignment3/upload/: CMakeLists.txt
old_files/assignment3/upload/src/: mytest.cpp  test3d.c
old_files/assignment4/: CMakeLists.txt
old_files/assignment4/src/: Polygon.c  ball.cpp  mainWindow.cpp
old_files/assignment4/upload/src/: Line.c
old_files/assignment5/: Screen Recording 2024-06-27 at 01.53.13.mov  project.pro
old_files/assignment5/gradescope/: README.md
old_files/assignment5/gradescope/include/: Image.h  Polygon.h
old_files/assignment5/gradescope/test/test4/: test4b.c
old_files/assignment5/src/: Line.c  Module.c  Polygon.c
old_files/assignment5/test/test4/: polyspeed.c
old_files/graphic/images/: mask.ppm
old_files/graphic/include/: ppmIO.h
old_files/graphic/src/: combine.c  ppmmain.c
old_files/graphics/images/: geraniums.ppm  output.ppm
old_files/graphics/src/: lab1.c  mask.c
src/: Bezier.c  Image.c  Light.c  Line.c  Module.c  Particle.c  Polygon.c  WaterSimulation.cpp  fsMath.c  main.cpp  mainOffline.cpp  mainWindow.cpp  mainWindowOffline.cpp  perlinNoise.cpp  plyRead.c
test/test0/: test0a.c
test/test4/: test4a.c
test/test5/: test5a.c  test5c.c
test/test6/: test6a.c  test6b.c
test/test7/: test7a.c  test7b.c  test7c.c
test/test8/: test8a.c  test8b.c
test/test9/: starfury.ply  test9a.c  test9b.c  test9c.c  test9d.c  testLighting_shading.c
upload/: CMakeLists.txt  README.md
upload/result_7/: 7c.mov
upload/src/: Line.c  mainWindow.cpp
upload/test/: test.cpp  test.h
upload9/: README.md
upload9/include/: Bezier.h  Image.h  Light.h  Line.h  Polygon.h  WaterSimulation.h  anti-alias.h  ball.h  mainWindow.h  plyRead.h
upload9/src/: Image.c  Light.c  Module.c  Polygon.c  WaterSimulation.cpp
